plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.5'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.github.thiagomarqs'
version = '1.0.0'

java {
	sourceCompatibility = '21'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.2.5'
	implementation 'org.springframework.boot:spring-boot-starter-validation:3.2.5'
	implementation 'org.springframework.boot:spring-boot-starter-hateoas:3.2.5'
	implementation 'jakarta.inject:jakarta.inject-api:2.0.1'
	implementation 'mysql:mysql-connector-java:8.0.33'
	implementation 'com.h2database:h2:2.2.224'
	implementation 'com.google.code.gson:gson:2.10.1'
	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
	implementation 'org.springframework.boot:spring-boot-starter-actuator:3.3.0'
	annotationProcessor "org.mapstruct:mapstruct-processor:1.5.5.Final"
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.mockito:mockito-core:5.11.0'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}

compileJava {
	options.compilerArgs += [
			'-Amapstruct.suppressGeneratorTimestamp=true',
			'-Amapstruct.suppressGeneratorVersionInfoComment=true',
			'-Amapstruct.verbose=true',
			'-Amapstruct.disableBuilders=true',
			'-Amapstruct.defaultComponentModel=jsr330'
	]
}
